--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ before_install:
   - sudo apt-get update && sudo apt-get install -y shellcheck
 
 script:
-  -ls -l
-  -bash test.sh
+  -bash gcd.sh 25 5
   -pwd
 
 notifications:
