--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,21 @@ language: bash
 
 before_install:
   - sudo apt-get update && sudo apt-get install -y shellcheck
-  - sudo apt-get install imagemagick
-
+  - sudo apt-get install imagemagick 
+  - sudo apt-get install p7zip 
 
 script:
   - ls -l
-  - shellcheck ProcessImages.sh
+  - shellcheck Task1-ProcessImages.sh
   - echo Task1
   - echo "=============================="
-  - bash ProcessImages.sh -h
-  - bash ProcessImages.sh -q ./img 90
-  - bash ProcessImages.sh -r ./img 90%
-  - bash ProcessImages.sh -w ./img xzl SouthEast 20 y
-  - bash ProcessImages.sh -p ./img Pre
-  - bash ProcessImages.sh -s ./img Suf
-  - bash ProcessImages.sh -t ./img
+  - bash Task1-ProcessImages.sh -h
+  - bash Task1-ProcessImages.sh -q ./img 90
+  - bash Task1-ProcessImages.sh -r ./img 90%
+  - bash Task1-ProcessImages.sh -w ./img xzl SouthEast 20 y
+  - bash Task1-ProcessImages.sh -p ./img Pre
+  - bash Task1-ProcessImages.sh -s ./img Suf
+  - bash Task1-ProcessImages.sh -t ./img
   - echo "=============================="
   - shellcheck Task2-ProcessFile.sh
   - echo Task2
@@ -27,13 +27,16 @@ script:
   - bash Task2-ProcessFile.sh -n
   - bash Task2-ProcessFile.sh -m
   - echo "=============================="
-  
+  - shellcheck Task3-ProcessFile.sh
+  - echo Task3
+  - bash Task3-ProcessFile.sh -h
+  - bash Task3-ProcessFile.sh -t
+  - bash Task3-ProcessFile.sh -i
+  - bash Task3-ProcessFile.sh -u
+  - bash Task3-ProcessFile.sh -s
+  - bash Task3-ProcessFile.sh -c
+  - bash Task3-ProcessFile.sh -f /whats-new.html
 
 notifications:
   email:
     on_success: never
-
-
-
-
-
