--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: bash
 before_install:
   - sudo apt-get update && sudo apt-get install -y shellcheck
   - sudo apt-get install imagemagick 
-  - sudo apt-get install p7zip 
+  - sudo apt-get install p7zip-full
 
 script:
   - ls -l
